fix for SERVER-2326, unique : true semantics